Frontend: structural and navbar changes

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -32,7 +32,7 @@
 .logisticsCalculator {
     color: rgb(67, 64, 53);
     font-family: Garamond, serif;
-    font-size: 50px;
+    font-size: 100%;
     font-weight: bold;
 }
 
