--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
-.nav-link {
+.red-links .nav-link {
   color: rgb(255, 97, 97) !important;
+}
+
+.red-links .nav-link.active {
+  color: rgb(255, 219, 219) !important;
 }
