--- a/frontend/src/styles/CPM.css
+++ b/frontend/src/styles/CPM.css
@@ -1,7 +1,6 @@
 .CPM {
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 150px;
 }
 
 .CPM h3 {
@@ -12,4 +11,13 @@
     padding-top: 20px;
     padding-left: 150px;
     padding-right: 150px;
+    padding-bottom: 20px;
+}
+
+.calculated-activities {
+    background-color: rgb(32, 31, 31);
+    padding-top: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 100px;
 }
