--- a/frontend/src/styles/CPM.css
+++ b/frontend/src/styles/CPM.css
@@ -11,7 +11,7 @@
     padding-top: 20px;
     padding-left: 150px;
     padding-right: 150px;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
 }
 
 .calculated-activities {
@@ -19,5 +19,30 @@
     padding-top: 20px;
     padding-left: 150px;
     padding-right: 150px;
-    padding-bottom: 100px;
+    padding-bottom: 70px;
+}
+
+.critical-path {
+    background-color: rgb(158, 31, 31);
+    padding-top: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 70px;
+}
+
+.critical-path h3 {
+    color: rgb(236, 236, 236);
+}
+
+.critical-path-letters {
+    color: rgb(255, 215, 82);
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.activity-graph {
+    padding-top: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 120px;
 }
