--- a/frontend/src/styles/Middleman.css
+++ b/frontend/src/styles/Middleman.css
@@ -1,4 +1,22 @@
 .Middleman {
     text-align: center;
     padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Middleman h3 {
+    color: rgb(210, 29, 29);
+}
+
+.details-table {
+    padding-top: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-bottom: 60px;
+}
+
+.calculated-details {
+    padding-bottom: 80px;
 }
