--- a/frontend/src/styles/Middleman.css
+++ b/frontend/src/styles/Middleman.css
@@ -18,5 +18,9 @@
 }
 
 .calculated-details {
-    padding-bottom: 80px;
+    font-size: 17px;
+    color: white;
+    margin-bottom: 80px;
+    border: 4px solid rgb(198, 0, 0);
+    background-color: rgb(32, 31, 31);
 }
